--- a/at-opengl-doomlike.vcxproj.filters
+++ b/at-opengl-doomlike.vcxproj.filters
@@ -52,6 +52,10 @@
     <None Include="dependencies\freeglut\bin\x64\freeglut.dll" />
     <None Include="dependencies\freeglut\bin\Win32\freeglut.dll" />
     <None Include="textures\Bricks_01.ppm" />
+    <None Include="README.md" />
+    <None Include=".gitignore" />
+    <None Include="textures\Planks_01.ppm" />
+    <None Include="textures\Skybox_01.ppm" />
   </ItemGroup>
   <ItemGroup>
     <Library Include="dependencies\GLFW\lib\glfw3.lib" />
