--- a/at-opengl-doomlike.vcxproj
+++ b/at-opengl-doomlike.vcxproj
@@ -166,13 +166,21 @@
     <None Include="textures\All_Textures.ppm" />
     <None Include="textures\Amogus_01.ppm" />
     <None Include="textures\Bricks_01.ppm" />
+    <None Include="textures\Crossbow.ppm" />
+    <None Include="textures\Floor.ppm" />
     <None Include="textures\Planks_01.ppm" />
+    <None Include="textures\podloga.ppm" />
     <None Include="textures\Skybox_01.ppm" />
+    <None Include="textures\Sprites.ppm" />
     <None Include="textures\Textures.ppm" />
+    <None Include="textures\Walls.ppm" />
   </ItemGroup>
   <ItemGroup>
     <Library Include="dependencies\GLFW\lib\glfw3.lib" />
     <Library Include="dependencies\GLFW\lib\glfw3_mt.lib" />
+  </ItemGroup>
+  <ItemGroup>
+    <Media Include="audio\DUN_DUN_DUN.wav" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
