--- a/at-opengl-doomlike.vcxproj.filters
+++ b/at-opengl-doomlike.vcxproj.filters
@@ -81,12 +81,14 @@
     <None Include="splasharts\Splashart_menu_title.ppm" />
     <None Include="splasharts\Splashart_lose.ppm" />
     <None Include="splasharts\Splashart_win.ppm" />
+    <None Include="freeglut.dll" />
   </ItemGroup>
   <ItemGroup>
     <Library Include="dependencies\GLFW\lib\glfw3.lib" />
     <Library Include="dependencies\GLFW\lib\glfw3_mt.lib" />
     <Library Include="dependencies\freeglut\lib\Win32\freeglut.lib" />
     <Library Include="dependencies\freeglut\lib\x64\freeglut.lib" />
+    <Library Include="dependencies\freeglut\include\GL\freeglut.lib" />
   </ItemGroup>
   <ItemGroup>
     <Media Include="audio\DUN_DUN_DUN.wav">
